validated model.py for sqlite3

--- a/config.cfg
+++ b/config.cfg
@@ -1,3 +1,4 @@
-DEBUG = True
-SQLALCHEMY_DATABASE_URI = 'sqlite:////home/jgrover/Projects/Auction/db/Auction.db'
-SECRET_KEY = 'Me5FlPnaU0hUtrAmbUm9CoLoqCai9taM'
+DEBUG=True
+SQLALCHEMY_DATABASE_URI='sqlite:////home/jgrover/Projects/Auction/db/Auction.db'
+SQLALCHEMY_TRACK_MODIFICATIONS=False
+SECRET_KEY='Me5FlPnaU0hUtrAmbUm9CoLoqCai9taM'
