--- a/auction.service
+++ b/auction.service
@@ -3,11 +3,11 @@ Description=uWSGI instance to serve auction app
 After=network.target
 
 [Service]
-user=jgrover
+user=auction
 Group=www-data
-WorkingDirectory=/home/jgrover/Projects/mini_auction
-Environment="PATH=/home/jgrover/Projects/mini_auction/Auction_env/bin"
-ExecStart=/home/jgrover/Projects/mini_auction/Auction_env/bin/uwsgi --ini auction.ini
+WorkingDirectory=/home/auction/mini_auction
+Environment="PATH=/home/auction/mini_auction/Auction_env/bin"
+ExecStart=/home/auction/mini_auction/Auction_env/bin/uwsgi --ini auction.ini
 
 [Install]
 WantedBy=multi-user.target
