switch to Flask_User refactor model for multiple contact classes

--- a/config.cfg
+++ b/config.cfg
@@ -2,3 +2,5 @@ DEBUG=True
 SQLALCHEMY_DATABASE_URI='sqlite:////home/auction/mini_auction/db/Auction.db'
 SQLALCHEMY_TRACK_MODIFICATIONS=False
 SECRET_KEY='Wee1nYiVbRa6gHNevSex0cOeLaiR7bOg'
+CSRF_ENABLED = True
+USER_ENABLE_EMAIL = True
