--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,40 @@
-alembic==0.9.6
+alembic==0.9.7
 bcrypt==3.1.4
 blinker==1.4
-cffi==1.11.2
+certifi==2018.1.18
+cffi==1.11.4
+chardet==3.0.4
 click==6.7
+crypto==1.4.1
 dominate==2.3.1
 Flask==0.12.2
 Flask-Admin==1.5.0
 Flask-Bootstrap==3.3.7.1
-Flask-Login==0.4.0
+Flask-Login==0.4.1
 Flask-Mail==0.9.1
 Flask-Migrate==2.1.1
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
 Flask-User==0.6.19
 Flask-WTF==0.14.2
+idna==2.6
 itsdangerous==0.24
-Jinja2==2.9.6
+Jinja2==2.10
 Mako==1.0.7
 MarkupSafe==1.0
+Naked==0.1.31
 passlib==1.7.1
 pkg-resources==0.0.0
 pycparser==2.18
-pycryptodome==3.4.7
+pycryptodome==3.4.11
 python-dateutil==2.6.1
 python-editor==1.0.3
+PyYAML==3.12
+requests==2.18.4
+shellescape==3.4.1
 six==1.11.0
-SQLAlchemy==1.1.14
-uWSGI==2.0.15
+SQLAlchemy==1.2.2
+urllib3==1.22
 visitor==0.1.3
-Werkzeug==0.12.2
+Werkzeug==0.14.1
 WTForms==2.1
