--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,21 @@
 alembic==0.9.7
-bcrypt==3.1.4
-blinker==1.4
-certifi==2018.1.18
-cffi==1.11.4
-chardet==3.0.4
-click==6.7
-crypto==1.4.1
-dominate==2.3.1
-Flask==1.0
-Flask-Admin==1.5.0
-Flask-Bootstrap==3.3.7.1
-Flask-Login==0.4.1
-Flask-Mail==0.9.1
-Flask-Migrate==2.1.1
-Flask-Script==2.0.6
-Flask-SQLAlchemy==2.3.2
-Flask-User==0.6.19
-Flask-WTF==0.14.2
-idna==2.6
-itsdangerous==0.24
-Jinja2==2.10
+cryptography==1.7.1
+enum34==1.1.6
+idna==2.2
+ipaddress==1.0.17
+keyring==10.1
+keyrings.alt==1.3
 Mako==1.0.7
 MarkupSafe==1.0
-Naked==0.1.31
-passlib==1.7.1
-pkg-resources==0.0.0
+pyasn1==0.1.9
 pycparser==2.18
-pycryptodome==3.6.6
+pycrypto==2.6.1
+pygobject==3.22.0
 python-dateutil==2.6.1
 python-editor==1.0.3
-PyYAML==5.1
-requests==2.18.4
-shellescape==3.4.1
+pyxdg==0.25
+RPi.GPIO==0.6.5
+SecretStorage==2.3.1
 six==1.11.0
 SQLAlchemy==1.2.2
-urllib3==1.24.2
-visitor==0.1.3
-Werkzeug==0.15.3
-WTForms==2.1
+virtualenv==16.4.3
