--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,22 @@
-alembic==0.9.7
-cryptography==1.7.1
-enum34==1.1.6
-idna==2.2
-ipaddress==1.0.17
-keyring==10.1
-keyrings.alt==1.3
-Mako==1.0.7
-MarkupSafe==1.0
-pyasn1==0.1.9
-pycparser==2.18
-pycrypto==2.6.1
-pygobject==3.22.0
-python-dateutil==2.6.1
-python-editor==1.0.3
-pyxdg==0.25
-RPi.GPIO==0.6.5
-SecretStorage==2.3.1
-six==1.11.0
-SQLAlchemy==1.2.2
-virtualenv==16.4.3
+alembic
+cryptography
+enum34
+idna
+ipaddress
+keyring
+keyrings.alt
+Mako
+MarkupSafe
+pyasn1
+pycparser
+pycrypto
+pygobject
+python-dateutil
+python-editor
+pyxdg
+RPi.GPIO
+SecretStorage
+six
+SQLAlchemy
+virtualenv
+requests
