--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,49 @@
-alembic
-cryptography
-enum34
-idna
-ipaddress
-keyring
-keyrings.alt
-Mako
-MarkupSafe
-pyasn1
-pycparser
-pycrypto
-pygobject
-python-dateutil
-python-editor
-pyxdg
-RPi.GPIO
-SecretStorage
-six
-SQLAlchemy
-virtualenv
-requests
+alembic==1.3.1
+bcrypt==3.1.7
+blinker==1.4
+certifi==2019.9.11
+cffi==1.13.2
+chardet==3.0.4
+Click==7.0
+cryptography==2.8
+dominate==2.4.0
+entrypoints==0.3
+enum34==1.1.6
+Flask==1.1.1
+Flask-Admin==1.5.4
+Flask-Bootstrap==3.3.7.1
+Flask-Login==0.4.1
+Flask-Mail==0.9.1
+Flask-SQLAlchemy==2.4.1
+Flask-User==1.0.2.0
+Flask-WTF==0.14.2
+idna==2.8
+ipaddress==1.0.23
+itsdangerous==1.1.0
+jeepney==0.4.1
+Jinja2==2.10.3
+keyring==19.2.0
+keyrings.alt==3.1.1
+Mako==1.1.0
+MarkupSafe==1.1.1
+passlib==1.7.1
+pkg-resources==0.0.0
+pyasn1==0.4.8
+pycairo==1.18.2
+pycparser==2.19
+pycrypto==2.6.1
+PyGObject==3.34.0
+python-dateutil==2.8.1
+python-editor==1.0.4
+pyxdg==0.26
+requests==2.22.0
+RPi.GPIO==0.7.0
+SecretStorage==3.1.1
+six==1.13.0
+SQLAlchemy==1.3.11
+urllib3==1.25.7
+uWSGI==2.0.18
+virtualenv==16.7.7
+visitor==0.1.3
+Werkzeug==0.16.0
+WTForms==2.2.1
