--- a/config.cfg
+++ b/config.cfg
@@ -4,3 +4,5 @@ SQLALCHEMY_TRACK_MODIFICATIONS=False
 SECRET_KEY='Wee1nYiVbRa6gHNevSex0cOeLaiR7bOg'
 CSRF_ENABLED = True
 USER_ENABLE_EMAIL = True
+USER_EMAIL_SENDER_EMAIL = 'grover.john@gmail.com'
+
