--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Flask-Admin==1.5.4
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
 Flask-User==1.0.2.0
 Flask-WTF==0.14.2
